# study-mode-agent

backend/: .env  .env.example
backend/studymode-backend/: .gitignore  pyproject.toml
backend/studymode-backend/src/studymode_backend/: __init__.py  agent.py  app.py  db.py
frontend/: app.py  chainlit.md
frontend/.chainlit/: config.toml
frontend/.chainlit/.chainlit/translations/: en-US.json
frontend/.chainlit/.files/: en_US.md
frontend/public/: hide-logo.css  remove-default-stop.js
